Fix Editor shifting problem (#662)
Close #652.

--- a/frontend/src/components/Util/TaskEditors/TaskEditor/RepeatFrequencyHeader.module.scss
+++ b/frontend/src/components/Util/TaskEditors/TaskEditor/RepeatFrequencyHeader.module.scss
@@ -1,7 +1,7 @@
 .Header {
   background: rgba(255, 255, 255, 0.6);
   padding: 9px 9px 6px 9px;
-  height: 100%;
+  height: 36px;
 }
 
 .Icon {
